# notker

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
samples/: 01-minimo.gabc  02-kyrie.gabc  04-dies-sanctificatus.gabc
scripts/: build-grammar-wasm.sh  build-neume-db.ts  build-sidecar.sh  dev-run.sh  extract-glyph-paths.py
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  project.rs
src/assets/: neume-db.json  tree-sitter-gregorio.wasm
src/editor/: context.ts  editor.ts  highlight-tree-sitter.ts  theme.ts
src/files/: file-io.ts  (+1 more)
test/: client.test.ts  cm-lsp.test.ts  commands.test.ts  context.test.ts  db.test.ts  debounce.test.ts  decode.test.ts  doc-list.test.ts  file-io.test.ts  gabc-pitch.test.ts  highlight.test.ts  jsonrpc.test.ts  nabc-move.test.ts  nabc-textual.test.ts  naming.test.ts  neume-db.smoke.test.ts  new-dialog.test.ts  overlay-conflict.test.ts  overlay-panel.test.ts  overlay.test.ts  palette-insert.test.ts  positions.test.ts  preview-engine.test.ts  preview-highlight.test.ts  preview-panel.test.ts  preview-sync.test.ts  project-io.test.ts  project-model.test.ts  scaffold.test.ts  search.test.ts  sidecar.smoke.test.ts  signature.test.ts  source-map.test.ts  syllable-spans.test.ts  synopsis-data.test.ts  synopsis.test.ts  tables.test.ts  toolbar.test.ts  transport-sidecar.test.ts  tuotilo-duration.test.ts  (+5 more)
(+54 files in other folders)
