[package]
name = "notker"
version = "0.0.3-alpha"
edition = "2021"
license = "GPL-3.0-only"

[lib]
name = "notker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.0", features = [] }

[dependencies]
tauri = { version = "=2.11.0", features = [] }
tauri-plugin-shell = "=2.3.5"
tauri-plugin-dialog = "=2.7.0"
tauri-plugin-fs = "=2.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
